--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = alembic
+script_location = personal_assistant_migrations
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -31,15 +31,16 @@ prepend_sys_path = .
 # sourceless = false
 
 # version location specification; this defaults
-# to alembic/versions.  When using multiple version
+# to personal_assistant_migrations/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path
-# version_locations = %(here)s/bar %(here)s/bat alembic/versions
+# version_locations = %(here)s/bar %(here)s/bat personal_assistant_migrations/versions
 
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url =sqlite:///alembic_example.db
+sqlalchemy.url = sqlite:///records.db
+sqlite:///records.db
 
 
 [post_write_hooks]
